# OpenGL

./: CMakeLists.txt  Shader.cpp  Shader.h  main.cpp
shaders/: shader.frag  shader.vert
